// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavBeta renders 1`] = `
<body
  class="euiBody--hasFlyout"
  style="padding-inline-start: 0px;"
>
  <div>
    <div
      class="euiCollapsibleNavButtonWrapper emotion-euiCollapsibleNavButtonWrapper-left"
    >
      <button
        aria-controls="generated-id_euiCollapsibleNav"
        aria-expanded="true"
        aria-label="Collapse navigation"
        aria-pressed="true"
        class="euiButtonIcon euiCollapsibleNavButton emotion-euiButtonIcon-s-empty-text-euiCollapsibleNavButton"
        data-test-subj="euiCollapsibleNavButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="menuLeft"
        />
      </button>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <nav
        aria-label="aria-label"
        class="euiFlyout euiCollapsibleNav euiCollapsibleNavBeta testClass1 testClass2 emotion-euiFlyout-none-noMaxWidth-push-left-noAnimation-left-euiCollapsibleNavBeta-isPush-left-euiTestCss"
        data-test-subj="nav"
        id="generated-id_euiCollapsibleNav"
        style="inline-size: 248px; z-index: 1000;"
      >
        Nav content
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`EuiCollapsibleNavBeta renders initialIsCollapsed 1`] = `
<body
  class="euiBody--hasFlyout"
  style="padding-inline-start: 0px;"
>
  <div>
    <div
      class="euiCollapsibleNavButtonWrapper emotion-euiCollapsibleNavButtonWrapper-left"
    >
      <button
        aria-controls="generated-id_euiCollapsibleNav"
        aria-expanded="false"
        aria-label="Expand navigation"
        aria-pressed="false"
        class="euiButtonIcon euiCollapsibleNavButton emotion-euiButtonIcon-s-empty-text-euiCollapsibleNavButton"
        data-test-subj="euiCollapsibleNavButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="menuRight"
        />
      </button>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <nav
        aria-label="Site menu"
        class="euiFlyout euiCollapsibleNav euiCollapsibleNavBeta emotion-euiFlyout-none-noMaxWidth-push-left-noAnimation-left-euiCollapsibleNavBeta-isPush-left-isPushCollapsed"
        data-test-subj="nav"
        id="generated-id_euiCollapsibleNav"
        style="inline-size: 48px; z-index: 1000;"
      >
        Nav content
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
